fix deletion of regex

--- a/dokumentation/dokumentation-lpic.adoc
+++ b/dokumentation/dokumentation-lpic.adoc
@@ -813,6 +813,43 @@ Benutzten Speicherplatz anzeigen:
 
 - `du`: _Disk Usage_: genutzten Speicherplatz anzeigen
 
+== Regular Expressions
+
+https://www.debuggex.com/
+
+- `.`: ein beliebiges Zeichen
+
+- `\w`: Wordcharacter [a-zA-Z0-9_]
+- `\W`: kein Wordcharacter [a-zA-Z0-9_]
+- `\d`: Ziffer [0-9]
+- `\D`: keine Ziffer [0-9]
+- `\s`: Whitespace (Space, Tab, Newline)
+- `\S`: kein Whitespace (Space, Tab, Newline)
+
+- `\b`: Wortgrenze
+- `\B`: keine Wortgrenze
+
+Listen:
+
+- `[]`: passt auf jedes Zeichen, das in den Klammern angegeben ist
+- `[a-z]`: passt auf jeden Kleinbuchstaben
+- `[0-9]`: passt auf alle Zahlen
+
+- `()`: Gruppe
+- `(entweder|oder)`: passt auf `entweder` oder `oder`
+
+Anker:
+
+-`^`: Anfang der Zeile
+- `$`: Ende der Zeile
+
+Quantifier:
+
+- `*`: 0 Mal oder beliebig oft
+- `+`: 1 Mal oder beliebig oft
+- `?`: 0 Mal oder 1 Mal
+- `{3}`: exakt 3 Mal
+* `{1,3}`: 1 bis 3 Mal
 
 == Scripts
 
