--- a/dokumentation/dokumentation-lpic.adoc
+++ b/dokumentation/dokumentation-lpic.adoc
@@ -800,7 +800,7 @@ Autorefresh has been enabled for repository 'repo-non-oss'.
 # zypper removerepo packman
 ----
 
-== Integrität von Dateisystemen
+= Integrität von Dateisystemen
 
 Freien Speicherplatz anzeigen:
 
@@ -813,7 +813,7 @@ Benutzten Speicherplatz anzeigen:
 
 - `du`: _Disk Usage_: genutzten Speicherplatz anzeigen
 
-== Regular Expressions
+= Regular Expressions
 
 https://www.debuggex.com/
 
@@ -851,9 +851,9 @@ Quantifier:
 - `{3}`: exakt 3 Mal
 * `{1,3}`: 1 bis 3 Mal
 
-== Scripts
+= Scripts
 
-=== Notationselemente
+== Notationselemente
 
 - `test -e <path>`: True, falls `<paht>` existiert
 - `[ -e <path> ]`: gleich wie oben, `[ ` (Leerschritt hinter `[` ist wichtig) ist eine andere Schreibweise für das Kommando `test` 
@@ -885,18 +885,17 @@ Quantifier:
 - `<ausdruck 1> && <ausdruck 2>`: Logisches UND: `<ausdruck 2>` wird nur ausgeführt, wenn `<ausdruck 1>` _wahr_ ist, fehlerfrei ausgeführt werden konnte etc.
 - `<ausdruck 1> || <ausdruck 2>`: Logisches ODER: `<ausdruck 2>` wird nur ausgeführt, wenn `<ausdruck 1>` _falsch_ ist, also nicht ausgeführt werden konnte etc.
 
+== Vergleichsoperatoren
 
+Stringvergleich:
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+- `<string1> == <string2>`: prüft, ob beide Strings gleich sind
+- `<string1> != <string2>`: prüft, ob die Strings ungleich sind
+- `<string1> < <string2>`: prüft, ob `<string1>` in der alphabetischen Sortierung vor `<string2>` kommt
+- `<string1> > <string2>`: prüft, ob `<string1>` in der alphabetischen Sortierung nach `<string2>` kommt
+- `<zahl1> -eq <zahl2>`: prüft, ob `<zahl1>` und `<zahl2>` gleich sind
+- `<zahl1> -ne <zahl2>`: prüft, ob `<zahl1>` und `<zahl2>` ungleich sind
+- `<zahl1> -gt <zahl2>`: prüft, ob `<zahl1>` grösser ist als `<zahl2>`
+- `<zahl1> -ge <zahl2>`: prüft, ob `<zahl1>` grösser oder gleich `<zahl2>` ist
+- `<zahl1> -lt <zahl2>`: prüft, ob `<zahl1>` kleiner ist als `<zahl2>`
+- `<zahl1> -le <zahl2>`: prüft, ob `<zahl1>` kleiner oder gleich `<zahl2>` ist
